# Future_bot

./: .env.example  .gitignore  .gitkeep  README.md  pyproject.toml  Список групп.txt  Список слов и хэштегов.txt  Список слов.txt
.github/workflows/: tests.yml
future_bot/: __init__.py  __main__.py  config.py  logic.py  scheduler.py  service.py  storage.py  vk_client.py
tests/: test_config.py  test_logic.py  test_main.py  test_service.py  test_storage.py  test_vk_client.py
