[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "future-bot"
version = "0.1.0"
description = "Daily VK post digest bot for Formula Futurology."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
future-bot = "future_bot.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
